--- a/src/main/resources/assets/jigsaw_pp/lang/en_us.json
+++ b/src/main/resources/assets/jigsaw_pp/lang/en_us.json
@@ -386,7 +386,7 @@
   "item.jigsaw_pp.pudge_apron": "Pudge apron",
   "item.jigsaw_pp.underwear": "Underwear",
   "item.jigsaw_pp.expectorator": "Expectorator",
-  "item.jigsaw_pp.expectorator.desc": "§7When ability key is pressed expectorates high-velocity saliva upon your enemy's face!",
+  "item.jigsaw_pp.expectorator.desc": "DISCARDED",
   "item.jigsaw_pp.military_boots": "Military boots",
   "item.jigsaw_pp.military_boots.desc": "§7Can get you through any§6mud",
   "entity.jigsaw_pp.cursed_cow": "Cursed cow",
