--- a/src/main/resources/assets/jigsaw_pp/lang/ru_ru.json
+++ b/src/main/resources/assets/jigsaw_pp/lang/ru_ru.json
@@ -137,9 +137,11 @@
   "block.jigsaw_pp.mold_block": "Блок плесени",
   "item.jigsaw_pp.mold": "Плесень",
   "block.jigsaw_pp.beaver_computer": "Боброхост",
+  "block.jigsaw_pp.thron": "Деревянный трон (ужасно)",
   "effect.jigsaw.beaver_so_deffect": "Коричневый экран смерти",
   "item.jigsaw_pp.beaver_knife": "Боброножик",
   "item.jigsaw_pp.beaver_axe": "Бобровый топоришко",
+  "item.jigsaw_pp.sapper_shovel": "Сапёрная лопатка",
   "item.jigsaw_pp.pigkaxe": "Свинокоп",
   "item.jigsaw_pp.pigkaxe.desc": "§7Ударьте свинью §6громоотводом",
   "item.jigsaw_pp.tube_19": "Пробирка №19",
@@ -275,33 +277,33 @@
 
   "item.minecraft.tipped_arrow.effect.poop_potion": "Обговненная стрела",
   "item.minecraft.potion.effect.poop_potion": "Зелье говна",
-  "item.minecraft.splash_potion.effect.poop_potion": "Splash poop potion",
-  "item.minecraft.lingering_potion.effect.poop_potion": "Lingering poop potion",
+  "item.minecraft.splash_potion.effect.poop_potion": "Взрывное зелье говна",
+  "item.minecraft.lingering_potion.effect.poop_potion": "Оседающее зелье говна",
 
-  "item.minecraft.tipped_arrow.effect.purgative_potion": "Purgative arrow",
-  "item.minecraft.potion.effect.purgative_potion": "Purgative potion",
-  "item.minecraft.splash_potion.effect.purgative_potion": "Splash purgative potion",
-  "item.minecraft.lingering_potion.effect.purgative_potion": "Lingering purgative potion",
+  "item.minecraft.tipped_arrow.effect.purgative_potion": "Слабительная стрела",
+  "item.minecraft.potion.effect.purgative_potion": "Слабительное зелье",
+  "item.minecraft.splash_potion.effect.purgative_potion": "Взрывное слабительное зелье",
+  "item.minecraft.lingering_potion.effect.purgative_potion": "Оседающее слабительное зелье",
 
-  "item.minecraft.tipped_arrow.effect.rectal_thrust_potion": "Rectal thrust arrow",
-  "item.minecraft.potion.effect.rectal_thrust_potion": "Rectal thrust potion",
-  "item.minecraft.splash_potion.effect.rectal_thrust_potion": "Splash rectal thrust potion",
-  "item.minecraft.lingering_potion.effect.rectal_thrust_potion": "Lingering rectal thrust potion",
+  "item.minecraft.tipped_arrow.effect.rectal_thrust_potion": "Стрела ректальной тяги",
+  "item.minecraft.potion.effect.rectal_thrust_potion": "Зелье ректальной тяги",
+  "item.minecraft.splash_potion.effect.rectal_thrust_potion": "Взрывное зелье ректальной тяги",
+  "item.minecraft.lingering_potion.effect.rectal_thrust_potion": "Оседающее зелье ректальной тяги",
 
-  "item.minecraft.tipped_arrow.effect.bvsod_potion": "BVSOD arrow",
-  "item.minecraft.potion.effect.bvsod_potion": "BVSOD potion",
-  "item.minecraft.splash_potion.effect.bvsod_potion": "Splash BVSOD potion",
-  "item.minecraft.lingering_potion.effect.bvsod_potion": "Lingering BVSOD potion",
+  "item.minecraft.tipped_arrow.effect.bvsod_potion": "BVSOD стрела",
+  "item.minecraft.potion.effect.bvsod_potion": "BVSOD зелье",
+  "item.minecraft.splash_potion.effect.bvsod_potion": "Взрывное BVSOD зелье",
+  "item.minecraft.lingering_potion.effect.bvsod_potion": "Оседающее BVSOD зелье",
 
-  "item.minecraft.tipped_arrow.effect.egged_potion": "Egged arrow",
-  "item.minecraft.potion.effect.egged_potion": "Egged potion",
-  "item.minecraft.splash_potion.effect.egged_potion": "Splash egged potion",
-  "item.minecraft.lingering_potion.effect.egged_potion": "Lingering egged potion",
+  "item.minecraft.tipped_arrow.effect.egged_potion": "Яичная стрела",
+  "item.minecraft.potion.effect.egged_potion": "Яичное зелье",
+  "item.minecraft.splash_potion.effect.egged_potion": "Взрывное яичное зелье",
+  "item.minecraft.lingering_potion.effect.egged_potion": "Оседающее яичное зелье",
 
-  "item.minecraft.tipped_arrow.effect.unlevitation_potion": "Unlevitation arrow",
-  "item.minecraft.potion.effect.unlevitation_potion": "Unlevitation potion",
-  "item.minecraft.splash_potion.effect.unlevitation_potion": "Splash unlevitation potion",
-  "item.minecraft.lingering_potion.effect.unlevitation_potion": "Lingering unlevitation potion",
+  "item.minecraft.tipped_arrow.effect.unlevitation_potion": "Стрела антилевитации",
+  "item.minecraft.potion.effect.unlevitation_potion": "Зелье антилевитации",
+  "item.minecraft.splash_potion.effect.unlevitation_potion": "Взрывное зелье антилевитации",
+  "item.minecraft.lingering_potion.effect.unlevitation_potion": "Оседающее зелье антилевитации",
 
   "block.jigsaw_pp.creative_heat_source.desc": "§7Бесконечно нагревает пурген завод",
   "block.jigsaw_pp.creative_heat_source": "Креативный нагреватель",
@@ -311,24 +313,24 @@
   "item.jigsaw_pp.doctor_helmet.desc": "§7Позволяет видеть невиданное в таблетках пургена",
 
   "effect.jigsaw_pp.empregnation": "Беременность",
-  "item.minecraft.tipped_arrow.effect.empregnation_potion": "Impregnation arrow",
-  "item.minecraft.potion.effect.empregnation_potion": "Impregnation potion",
-  "item.minecraft.splash_potion.effect.empregnation_potion": "Splash impregnation potion",
-  "item.minecraft.lingering_potion.effect.empregnation_potion": "Lingering impregnation potion",
+  "item.minecraft.tipped_arrow.effect.empregnation_potion": "Стрела беременности",
+  "item.minecraft.potion.effect.empregnation_potion": "Беременное зелье",
+  "item.minecraft.splash_potion.effect.empregnation_potion": "Взрывная беременность",
+  "item.minecraft.lingering_potion.effect.empregnation_potion": "Оседающая беременность",
 
   "item.jigsaw_pp.gruel": "Баланда",
 
   "effect.jigsaw_pp.purgenman_blessing": "Провиденье пурген джентельмена",
-  "item.minecraft.tipped_arrow.effect.purgenman_blessing_potion": "PurgenMan's Blessing arrow",
-  "item.minecraft.potion.effect.purgenman_blessing_potion": "PurgenMan's Blessing potion",
-  "item.minecraft.splash_potion.effect.purgenman_blessing_potion": "Splash PurgenMan's Blessing potion",
-  "item.minecraft.lingering_potion.effect.purgenman_blessing_potion": "Lingering PurgenMan's Blessing potion",
+  "item.minecraft.tipped_arrow.effect.purgenman_blessing_potion": "Стрела провиденья пурген джентельмена",
+  "item.minecraft.potion.effect.purgenman_blessing_potion": "Зелье провиденья пурген джентельмена",
+  "item.minecraft.splash_potion.effect.purgenman_blessing_potion": "Взрывное зелье провиденья пурген джентельмена",
+  "item.minecraft.lingering_potion.effect.purgenman_blessing_potion": "Оседающее зелье провиденья пурген джентельмена",
 
   "effect.jigsaw_pp.poop_walking": "Ходьба по говну",
-  "item.minecraft.tipped_arrow.effect.poop_walking_potion": "Poop walking arrow",
-  "item.minecraft.potion.effect.poop_walking_potion": "Poop walking potion",
-  "item.minecraft.splash_potion.effect.poop_walking_potion": "Splash poop walking potion",
-  "item.minecraft.lingering_potion.effect.poop_walking_potion": "Lingering poop walking potion",
+  "item.minecraft.tipped_arrow.effect.poop_walking_potion": "Стрела ходьбы по говну",
+  "item.minecraft.potion.effect.poop_walking_potion": "Зелье ходьбы по говну",
+  "item.minecraft.splash_potion.effect.poop_walking_potion": "Взрывное зелье ходьбы по говну",
+  "item.minecraft.lingering_potion.effect.poop_walking_potion": "Оседающее зелье ходьбы по говну",
 
   "item.jigsaw_pp.plunger.desc": "§7Бомжацкий трезубец работающий в говне",
   "item.jigsaw_pp.slon_gun.desc": "§7Присед + ПКМ по воде для перезарядки",
@@ -344,17 +346,17 @@
   "enchantment.jigsaw_pp.purgen_armor_piercing.desc": "§7Позволяет вылетающей пилюле игнорировать броню",
 
   "effect.jigsaw_pp.meteorism": "Метеоризм",
-  "item.minecraft.tipped_arrow.effect.meteorism_potion": "Flatulence arrow",
-  "item.minecraft.potion.effect.poop_meteorism_potion": "Flatulence potion",
-  "item.minecraft.splash_potion.effect.meteorism_potion": "Splash flatulence potion",
-  "item.minecraft.lingering_potion.effect.meteorism_potion": "Lingering flatulence potion",
+  "item.minecraft.tipped_arrow.effect.meteorism_potion": "Стрела пердежа",
+  "item.minecraft.potion.effect.poop_meteorism_potion": "Пердёжное зелье",
+  "item.minecraft.splash_potion.effect.meteorism_potion": "Взрывное пердёжное зелье",
+  "item.minecraft.lingering_potion.effect.meteorism_potion": "Оседающее пердёжное зелье",
 
-  "block.jigsaw_pp.beaverhost.desc": "§7Даже не вздумайте §cвключать §7это",
+  "block.jigsaw_pp.beaverhost.desc": "§7Даже не вздумайте §включать §7это",
   "item.jigsaw_pp.pirate_cutlass.desc": "§7ПКМ для дэша",
   "item.jigsaw_pp.paddle.desc": "§7Ускоряет вас в воде если взяты в обе руки",
   "item.jigsaw_pp.road_sign.desc": "§7Имеет отдачу по площади",
   "item.jigsaw_pp.jetstream_chair.desc": "§7Потчует боброжмыхом в культях космонавта",
-  "item.jigsaw_pp.ponos_cutlass.desc": "§7Отчищает ваших врагов от поноса, дает за это плюшки",
+  "item.jigsaw_pp.ponos_cutlass.desc": "§7Высасывает понос из ваших врагов, дает за это плюшки",
 
   "item.jigsaw_pp.cursed_cow_spawn_egg": "§rЯйцо призыва §7проклятой коровы",
   "item.jigsaw_pp.teeth": "Зубы",
@@ -378,5 +380,14 @@
   "item.jigsaw_pp.expectorator": "Харчеватель",
   "item.jigsaw_pp.expectorator.desc": "§7На кнопку способности выпускает высокоскоростную харчу на лица ваших врагов!",
   "item.jigsaw_pp.military_boots": "Берцы",
-  "item.jigsaw_pp.military_boots.desc": "§7Позволяют ходить по любой §6грязи"
+  "item.jigsaw_pp.military_boots.desc": "§7Позволяют ходить по любой §6грязи",
+  "entity.jigsaw_pp.cursed_cow": "Проклятая корова",
+  "key.jigsaw_pp.armor_ability": "Способность брони",
+  "key.category.jigsaw_pp": "Цыганские фокусы",
+  "item.jigsaw_pp.purgen_smoke_grenade": "Дымовая граната с пургеном",
+  "item.jigsaw_pp.gassy_smoke_grenade": "Пердёжная граната",
+  "item.jigsaw_pp.ponos_smoke_grenade": "Говняная граната",
+  "item.jigsaw_pp.fart_bottle": "Бутылочка с пердежом",
+  "item.jigsaw_pp.poop_bottle": "Бутылочка с дерьмецом",
+  "item.jigsaw_pp.brown_cutlass.desc": "§7Теперь вы блядский Горшок-Прицел"
 }
