--- a/src/main/resources/assets/jigsaw_pp/lang/ru_ru.json
+++ b/src/main/resources/assets/jigsaw_pp/lang/ru_ru.json
@@ -179,7 +179,7 @@
   "item.jigsaw_pp.admin_stick": "Admin ♂anal♂ stick",
   "block.jigsaw_pp.pw_hat": "Цилиндр PWGood-а",
   "item.jigsaw_pp.tree_launcher": "Древострел",
-  "block.jigsaw_pp.lenin_bust.desc": "§7При использовании в качестве пасеки разлагается на §eплесень",
+  "block.jigsaw_pp.lenin_bust.desc": "§7При использовании в качестве пасеки разлагается на §eплесень и липовый мёд",
   "block.jigsaw_pp.purgen_factory.desc": "§7Следует установить на §6Нагреватель завода",
   "block.jigsaw_pp.purgen_factory.desc_two": "§7наполните жидкостью при помощи ведра",
   "item.jigsaw_pp.batch_size_card.desc": "§7Увеличивает размер порции §6Пургена",
@@ -254,7 +254,7 @@
   "item.jigsaw_pp.teapot_drill.desc": "§7Кормить угольками",
   "block.jigsaw_pp.farfuhrer": "Фарфюрер",
   "block.jigsaw_pp.randompot": "Случайник",
-  "item.jigsaw_pp.teapot_hammer": "Чайник молот",
+  "item.jigsaw_pp.teapot_hammer": "Стучайник",
   "entity.jigsaw_pp.beaver_spider": "Бобер паук",
   "block.jigsaw_pp.tntpot": "Взрывчайник",
   "item.jigsaw_pp.teapot_rifle": "Винтовчайник",
