--- a/src/main/resources/assets/jigsaw_pp/lang/en_us.json
+++ b/src/main/resources/assets/jigsaw_pp/lang/en_us.json
@@ -405,5 +405,6 @@
   "item.jigsaw_pp.brown_cutlass.desc": "§7You are PotSight now",
 
   "item.jigsaw_pp.grenade_launcher": "Grenade Launcher",
-  "item.jigsaw_pp.smoke_smoke_grenade": "Smoke grenade"
+  "item.jigsaw_pp.smoke_smoke_grenade": "Smoke grenade",
+  "item.jigsaw_pp.fart_gun": "Fart gun"
 }
