--- a/src/main/resources/assets/jigsaw_pp/lang/en_us.json
+++ b/src/main/resources/assets/jigsaw_pp/lang/en_us.json
@@ -406,5 +406,6 @@
 
   "item.jigsaw_pp.grenade_launcher": "Grenade Launcher",
   "item.jigsaw_pp.smoke_smoke_grenade": "Smoke grenade",
-  "item.jigsaw_pp.fart_gun": "Fart gun"
+  "item.jigsaw_pp.fart_gun": "Fart gun",
+  "block.jigsaw_pp.pooclear_tnt": "Pooclear Bomb"
 }
