--- a/src/main/resources/assets/jigsaw_pp/lang/ru_ru.json
+++ b/src/main/resources/assets/jigsaw_pp/lang/ru_ru.json
@@ -389,9 +389,51 @@
   "item.jigsaw_pp.fart_bottle": "Бутылочка с пердежом",
   "item.jigsaw_pp.poop_bottle": "Бутылочка с дерьмецом",
   "item.jigsaw_pp.brown_cutlass.desc": "§7Теперь вы блядский Горшок-Прицел",
-  "item.jigsaw_pp.fart_gun.desc": "Требует баночек с газом",
+  "item.jigsaw_pp.fart_gun.desc": "§7Требует баночек с газом",
   "subtitles.fart": "Пердеж",
-  "item.jigsaw_pp.bottles": "Имеет механики дыхания дракона",
+  "item.jigsaw_pp.bottles": "§7Имеет механики дыхания дракона",
   "block.jigsaw_pp.coprolite": "Копролит",
-  "item.jigsaw_pp.grenade_launcher.desc": "Работает на гранатах"
+  "item.jigsaw_pp.grenade_launcher.desc": "§7Работает на гранатах",
+
+  "item.jigsaw_pp.rocket": "Межконтинентальная ракета",
+  "item.jigsaw_pp.empty_rocket": "Ракета: (нет топлива)",
+  "item.jigsaw_pp.unfueled_rocket": "Ракета: (в процессе заправки)",
+  "entity.jigsaw_pp.rocket": "Ракета",
+  "block.jigsaw_pp.pooclear_tnt": "Говядерка",
+  "entity.jigsaw_pp.sweet_bread": "Сладкий хлеб",
+  "block.jigsaw_pp.chocolate_block": "Блок горького шоколада",
+
+  "entity.jigsaw_pp.gentleman": "Пурген мен",
+  "entity.gentleman.chat.phase1": "<Пурген мен> Ты насрал не тому под дверь!",
+  "entity.gentleman.chat.phase2": "<Пурген мен> И это все что ты высрал?",
+  "entity.gentleman.chat.phase3": "<Пурген мен> Хватит срать!",
+  "entity.gentleman.chat.pilule_shoot": "<Пурген мен> Нравится вкус моего лекарства?",
+  "entity.gentleman.chat.spawntnt": "<Пурген мен> Сюрприз, говноеды!",
+  "entity.gentleman.chat.death": "<Пурген мен> Аривидерчи, педики! Вы обрекли себя на участь хуже смерти!",
+
+  "entity.jigsaw_pp.abstract_emitter": "Абстрактный эмиттер",
+  "entity.jigsaw_pp.gas_emitter": "Эмиттер газа",
+  "entity.jigsaw_pp.poop_gas_emitter": "Эмиттер говна",
+  "entity.jigsaw_pp.purgative_gas_emitter": "Эмиттер поноса",
+  "entity.jigsaw_pp.fart_gas_emitter": "Эмиттер пердежа",
+  "entity.jigsaw_pp.smoke_gas_emitter": "Эмиттер дыма",
+  "entity.jigsaw_pp.brownhole_gas_emitter": "Эмиттер говноточины",
+  "entity.jigsaw_pp.emitter_projectile": "Эмиттер снаряд",
+  "entity.jigsaw_pp.pooclear_tnt": "Говядерка",
+  "entity.jigsaw_pp.nuclear_teapot": "Ядерный чайник",
+  "entity.jigsaw_pp.tntpot": "Взрывчайник",
+  "entity.jigsaw_pp.drist_tnt": "Дриставый динамит",
+
+  "item.jigsaw_pp.rocket.desc1": "§7Используйте пупса с именем формата <x,z> для установки цели",
+  "item.jigsaw_pp.rocket.desc2": "§7Используйте любой блок динамита для взрыва",
+  "item.jigsaw_pp.rocket.desc3": "§7Используйте бирку с именем для связки с детонатором",
+
+  "entity.jigsaw_pp.purgen_grenade_projectile": "Пурген граната",
+  "entity.jigsaw_pp.gassy_grenade_projectile": "Пердеж граната",
+  "entity.jigsaw_pp.ponos_grenade_projectile": "Говняная граната",
+  "entity.jigsaw_pp.smoke_grenade_projectile": "Дымовая граната",
+
+  "item.jigsaw_pp.grenade_launcher": "Гранатомет",
+  "item.jigsaw_pp.smoke_smoke_grenade": "Дымовая граната",
+  "item.jigsaw_pp.fart_gun": "Пушка-пердушка"
 }
